--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "giss"
 version = "0.1.0"
-authors = ["Anton Österberg <anton.osterberg@gmail.com>"]
+authors = ["Anton Österberg <anton.osterberg@protonmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33"
+regex = "1"
 reqwest = "0.9"
 serde = "1.0"
 serde_json = "1.0"
