--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2018"
 
 [dependencies]
 clap = "2.33"
+dirs = "2.0"
 regex = "1"
 reqwest = "0.9"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0.101"
+sha2 = "0.8.0"
 itertools = "0.8.1"
