--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "giss"
 version = "0.1.0"
 authors = ["Anton Österberg <anton.osterberg@protonmail.com>"]
 edition = "2018"
+include = ["src/**/*", "data/**/*"]
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,4 +17,5 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0.101"
 sha2 = "0.8.0"
-itertools = "0.8.1"
+itertools = "0.8"
+graphql_client = "0.8"
