Include build.rs in "include"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "giss"
 version = "0.1.0"
 authors = ["Anton Österberg <anton.osterberg@protonmail.com>"]
 edition = "2018"
-include = ["src/**/*", "data/**/*"]
+include = ["build.rs", "src/**/*", "data/**/*"]
 publish = false
 build = "build.rs"
 
