--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ serde_derive = "1.0"
 sha2 = "0.8"
 log = "0.4"
 env_logger = "0.7"
+termcolor = "1.1"
 
 [build-dependencies]
 built = { version = "0.4", features = ["git2"] }
