--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ dirs-next = "1.0.2"
 itertools = "0.8"
 lazy_static = "1.4"
 regex = "1"
-reqwest = "0.9"
+reqwest = { version = "0.10", features = [ "blocking", "json" ] }
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
