--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ dirs-next = "1.0.2"
 itertools = "0.8"
 lazy_static = "1.4"
 regex = "1.3"
-reqwest = { version = "0.10", features = [ "blocking", "json" ] }
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
