--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "giss"
 version = "0.1.0"
-authors = ["Anton Österberg <anton.osterberg@protonmail.com>"]
+authors = ["Anton Österberg <anton@42x.io>"]
 edition = "2018"
 include = ["build.rs", "src/**/*", "data/**/*"]
 publish = false
