--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,7 @@ sha2 = "0.8"
 log = "0.4"
 env_logger = "0.7"
 termcolor = "1.1"
-
-[build-dependencies]
-built = { version = "0.6", features = ["git2"] }
+giro = "0.1.1"
 
 [profile.release]
 lto = true
