--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Fetch Dependencies
         if: steps.cache-cargo-fetch.outputs.cache-hit != 'true'
         run: cargo fetch
+        env:
+          CARGO_UNSTABLE_SPARSE_REGISTRY: true
       - name: Build
         run: cargo build --all-features
       - name: Run tests
