--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,8 @@ regex = "1.3"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
-serde = "1.0"
+serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_derive = "1.0"
 sha2 = "0.8"
 log = "0.4"
 env_logger = "0.7"
