--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,6 +7,11 @@ on:
       - "src/**"
       - "tests/**"
       - ".github/workflows/rust.yml"
+env:
+  # For Rust versions prior to 1.68
+  CARGO_UNSTABLE_SPARSE_REGISTRY: true
+  # For 1.68 up until 1.70 later (after 1.70 this will become the default)
+  CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -26,8 +31,6 @@ jobs:
       - name: Fetch Dependencies
         if: steps.cache-cargo-fetch.outputs.cache-hit != 'true'
         run: cargo fetch
-        env:
-          CARGO_UNSTABLE_SPARSE_REGISTRY: true
       - name: Build
         run: cargo build --all-features
       - name: Run tests
