--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,17 +19,13 @@ regex = "1.3"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
-serde = "1.0"
+serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_derive = "1.0"
 sha2 = "0.8"
 log = "0.4"
 env_logger = "0.7"
 termcolor = "1.1"
 giro = "0.1"
-
-[build-dependencies]
-built = { version = "0.6", features = ["git2"] }
 
 [profile.release]
 lto = true
